--- a/src/assets/styles/partials/components/_postPreview.scss
+++ b/src/assets/styles/partials/components/_postPreview.scss
@@ -36,6 +36,11 @@
   }
 
   &-thumbnail {
+    img {
+      object-fit: cover;
+      object-position: center;
+    }
+
     .light &.loaded img {
       filter: blur(0) contrast(0.95);
     }
